@@ -83,10 +83,12 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var productIds = 상품_아이디_변환(product1, product2, product3);
             final var request = 레시피추가요청_생성(productIds);
 
+            final var images = 여러_사진_요청(3);
+
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             // when
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var response = 레시피_생성_요청(request, images, loginCookie);
 
             // then
             STATUS_CODE를_검증한다(response, 정상_생성);
@@ -109,7 +111,7 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             // when
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var response = 레시피_생성_요청(request, null, loginCookie);
 
             // then
             STATUS_CODE를_검증한다(response, 정상_생성);
@@ -137,7 +139,7 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var images = 여러_사진_요청(3);
 
             // when
-            final var response = 레시피_생성_요청(request, cookie);
+            final var response = 레시피_생성_요청(request, images, cookie);
 
             // then
             final var expectedCode = LOGIN_MEMBER_NOT_FOUND.getCode();
@@ -160,13 +162,14 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             복수_상품_저장(product1, product2, product3);
 
             final var productIds = 상품_아이디_변환(product1, product2, product3);
-            final var request = new RecipeCreateRequest(title, productIds, "밥 추가, 밥 추가, 밥 추가.. 끝!!",
-                    List.of("test1.png", "test2.png"));
+            final var request = new RecipeCreateRequest(title, productIds, "밥 추가, 밥 추가, 밥 추가.. 끝!!");
+
+            final var images = 여러_사진_요청(3);
 
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             // when
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var response = 레시피_생성_요청(request, images, loginCookie);
 
             // then
             final var expectedCode = REQUEST_VALID_ERROR_CODE.getCode();
@@ -179,15 +182,14 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
         @Test
         void 사용자가_레시피_작성할때_상품들이_NULL일시_예외가_발생한다() {
             // given
-            final var request = new RecipeCreateRequest("title", null, "밥 추가, 밥 추가, 밥 추가.. 끝!!",
-                    List.of("test1.png", "test2.png"));
+            final var request = new RecipeCreateRequest("title", null, "밥 추가, 밥 추가, 밥 추가.. 끝!!");
 
             final var images = 여러_사진_요청(3);
 
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             // when
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var response = 레시피_생성_요청(request, images, loginCookie);
 
             // then
             final var expectedCode = REQUEST_VALID_ERROR_CODE.getCode();
@@ -200,15 +202,14 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
         @Test
         void 사용자가_레시피_작성할때_상품들이_비어있을시_예외가_발생한다() {
             // given
-            final var request = new RecipeCreateRequest("title", Collections.emptyList(), "밥 추가, 밥 추가, 밥 추가.. 끝!!",
-                    List.of("test1.png", "test2.png"));
+            final var request = new RecipeCreateRequest("title", Collections.emptyList(), "밥 추가, 밥 추가, 밥 추가.. 끝!!");
 
             final var images = 여러_사진_요청(3);
 
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             // when
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var response = 레시피_생성_요청(request, images, loginCookie);
 
             // then
             final var expectedCode = REQUEST_VALID_ERROR_CODE.getCode();
@@ -232,12 +233,14 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
 
             final var productIds = 상품_아이디_변환(product1, product2, product3);
 
-            final var request = new RecipeCreateRequest("title", productIds, content, List.of("test.png"));
+            final var request = new RecipeCreateRequest("title", productIds, content);
+
+            final var images = 여러_사진_요청(3);
 
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             // when
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var response = 레시피_생성_요청(request, images, loginCookie);
 
             // then
             final var expectedCode = REQUEST_VALID_ERROR_CODE.getCode();
@@ -266,8 +269,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
 
             // when
             final var maxContent = "tests".repeat(100) + "a";
-            final var request = new RecipeCreateRequest("title", productIds, maxContent, List.of("test.png"));
-            final var response = 레시피_생성_요청(request, loginCookie);
+            final var request = new RecipeCreateRequest("title", productIds, maxContent);
+            final var response = 레시피_생성_요청(request, images, loginCookie);
 
             // then
             final var expectedCode = REQUEST_VALID_ERROR_CODE.getCode();
@@ -298,9 +301,10 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest = 레시피추가요청_생성(productIds);
-            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, images, loginCookie);
 
-            final var recipe = recipeRepository.findById(recipeId).get();
+            final var recipe = recipeRepository.findRecipeWithMemberById(recipeId);
             final var findImages = recipeImageRepository.findByRecipe(recipe);
 
             final var expected = RecipeDetailResponse.toResponse(recipe, findImages, products, totalPrice, false);
@@ -334,7 +338,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest = 레시피추가요청_생성(productIds);
-            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, images, loginCookie);
 
             // when
             final var response = 레시피_상세_정보_요청(cookie, recipeId);
@@ -383,7 +388,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest = 레시피추가요청_생성(productIds);
-            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, images, loginCookie);
 
             final var favoriteRequest = 레시피좋아요요청_생성(true);
 
@@ -413,7 +419,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest = 레시피추가요청_생성(productIds);
-            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, images, loginCookie);
 
             final var favoriteRequest = 레시피좋아요요청_생성(true);
             레시피_좋아요_요청(loginCookie, recipeId, favoriteRequest);
@@ -450,7 +457,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest = 레시피추가요청_생성(productIds);
-            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, images, loginCookie);
 
             final var favoriteRequest = 레시피좋아요요청_생성(true);
 
@@ -483,7 +491,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest = 레시피추가요청_생성(productIds);
-            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId = 레시피_추가_요청하고_id_반환(createRequest, images, loginCookie);
 
             final var favoriteRequest = 레시피좋아요요청_생성(null);
 
@@ -538,8 +547,9 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
 
             final var createRequest1 = 레시피추가요청_생성(productIds1);
             final var createRequest2 = 레시피추가요청_생성(productIds2);
-            final var recipeId1 = 레시피_추가_요청하고_id_반환(createRequest1, loginCookie);
-            final var recipeId2 = 레시피_추가_요청하고_id_반환(createRequest2, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId1 = 레시피_추가_요청하고_id_반환(createRequest1, images, loginCookie);
+            final var recipeId2 = 레시피_추가_요청하고_id_반환(createRequest2, images, loginCookie);
 
             final var pageDto = new PageDto(2L, 1L, true, true, FIRST_PAGE, PAGE_SIZE);
 
@@ -571,7 +581,8 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
             final var loginCookie = 로그인_쿠키를_얻는다();
 
             final var createRequest1 = 레시피추가요청_생성(productIds1);
-            final var recipeId1 = 레시피_추가_요청하고_id_반환(createRequest1, loginCookie);
+            final var images = 여러_사진_요청(3);
+            final var recipeId1 = 레시피_추가_요청하고_id_반환(createRequest1, images, loginCookie);
 
             final var pageDto = new PageDto(1L, 1L, true, true, FIRST_PAGE, PAGE_SIZE);
 
@@ -604,9 +615,10 @@ public class RecipeAcceptanceTest extends AcceptanceTest {
 
             final var createRequest1 = 레시피추가요청_생성(productIds1);
             final var createRequest2 = 레시피추가요청_생성(productIds2);
+            final var images = 여러_사진_요청(3);
 
-            레시피_생성_요청(createRequest1, loginCookie);
-            레시피_생성_요청(createRequest2, loginCookie);
+            레시피_생성_요청(createRequest1, images, loginCookie);
+            레시피_생성_요청(createRequest2, images, loginCookie);
 
             final var pageDto = new PageDto(0L, 0L, true, true, FIRST_PAGE, PAGE_SIZE);
             final var expected = Collections.emptyList();
